<resources>
    <string name="app_name">SofascoreMini</string>
    <string name="theme">Theme</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="day_first">DD / MM / YYYY</string>
    <string name="month_first">MM / DD / YYYY</string>
    <string name="about">About</string>
    <string name="sofascore_android_academy">Sofascore Android Academy</string>
    <string name="year">Class 2024</string>
    <string name="app_name_title">App Name</string>
    <string name="mini_sofascore_app">Mini Sofascore App</string>
    <string name="sofascore">Sofascore</string>
    <string name="api_credit">API Credit</string>
    <string name="developer">Developer</string>
    <string name="developer_name">Tina Mustapić</string>
    <string name="app_logo">App logo</string>
    <string name="date_format">Date Format</string>
    <string name="football">Football</string>
    <string name="basketball">Basketball</string>
    <string name="am_football">Am. Football</string>
    <string name="pointer_right">pointer right</string>
    <string name="d_events">%d Events</string>
    <string name="tournament_logo">tournament_logo</string>
    <string name="away_team_logo">away team logo</string>
    <string name="home_team_logo">home team logo</string>
    <string name="no_events">There are no events to display :(</string>
    <string name="country_image">Country image</string>
    <string name="matches_item">Matches</string>
    <string name="standings_item">Standings</string>
    <string name="hashtag">#</string>
    <string name="team">Team</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="p">P</string>
    <string name="l">L</string>
    <string name="goals">Goals</string>
    <string name="pts">PTS</string>
    <string name="diff">DIFF</string>
    <string name="str">Str</string>
    <string name="gb">GB</string>
    <string name="pct">PCT</string>
    <string name="round">Round %d</string>
    <string name="hyfen">-</string>
    <string name="no_results_yet">No results yet.</string>
    <string name="tournament_button">View Tournament Details</string>
    <string name="goal_icon">goal icon</string>
    <string name="score_text">%d-%d</string>
    <string name="incident_icon">Incident icon</string>
    <string name="minutes_format">%d\'</string>
    <string name="full_time">Full Time</string>
</resources>