<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/numberCard"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/teamNumber"
                style="@style/standingsTextHeadline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/hashtag" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/teamName"
            style="@style/standingsTextHeadline"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:ellipsize="end"
            android:ems="10"
            android:maxLines="2"
            android:text="@string/team" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:gravity="center">

            <TextView
                android:id="@+id/played"
                style="@style/standingsTextHeadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/p" />

            <TextView
                android:id="@+id/wins"
                style="@style/standingsTextHeadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/w" />

            <TextView
                android:id="@+id/losses"
                style="@style/standingsTextHeadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/l" />

            <TextView
                android:id="@+id/diff"
                style="@style/standingsTextHeadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/d" />

            <TextView
                android:id="@+id/goals"
                style="@style/standingsTextHeadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/goals" />

            <TextView
                android:id="@+id/points"
                style="@style/standingsTextHeadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pts" />

            <TextView
                android:id="@+id/gamesBehind"
                style="@style/standingsTextHeadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gb" />

            <TextView
                android:id="@+id/percent"
                style="@style/standingsTextHeadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pct" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>