<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_football"
        android:icon="@drawable/soccer_icon"
        android:title="@string/football"
        app:showAsAction="ifRoom"
        app:tint="?attr/surface1" />

    <item
        android:id="@+id/action_basketball"
        android:icon="@drawable/icon_basketball"
        android:title="@string/basketball"
        app:showAsAction="ifRoom"
        app:tint="?attr/surface1" />

    <item
        android:id="@+id/action_am_football"
        android:icon="@drawable/icon_american_football"
        android:title="@string/am_football"
        app:showAsAction="ifRoom"
        app:tint="?attr/surface1"/>

</menu>